feat: LogParam 작성